--- a/UpcomingMovies.Arc/UpcomingMovies.Arc/UpcomingMovies.Arc/packages.config
+++ b/UpcomingMovies.Arc/UpcomingMovies.Arc/UpcomingMovies.Arc/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Unity" version="5.8.0" targetFramework="portable45-net45+win8+wpa81" />
-  <package id="Xamarin.Forms" version="2.3.4.247" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="Xamarin.FFImageLoading" version="2.3.5" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="Xamarin.FFImageLoading.Forms" version="2.3.5" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="Xamarin.FFImageLoading.Transformations" version="2.3.5" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="Xamarin.Forms" version="2.4.0.280" targetFramework="portable45-net45+win8+wpa81" />
 </packages>
