--- a/UpcomingMovies.Arc/UpcomingMovies.Arc.Models/UpcomingMovies.Arc.Models.csproj
+++ b/UpcomingMovies.Arc/UpcomingMovies.Arc.Models/UpcomingMovies.Arc.Models.csproj
@@ -35,10 +35,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="DTO\Genre.cs" />
     <Compile Include="DTO\UpcomingMovie.cs" />
     <Compile Include="Helpers\MessengingCenterAlert.cs" />
     <Compile Include="Helpers\ObservableObject.cs" />
     <Compile Include="Helpers\ObservableRangeCollection.cs" />
+    <Compile Include="Interfaces\IGenre.cs" />
     <Compile Include="Interfaces\IUpcomingMovieModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
