--- a/UpcomingMovies.Arc/UpcomingMovies.Arc/UpcomingMovies.Arc.Android/Properties/AndroidManifest.xml
+++ b/UpcomingMovies.Arc/UpcomingMovies.Arc/UpcomingMovies.Arc.Android/Properties/AndroidManifest.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.companyname.UpcomingMovies.Arc" android:versionCode="1" android:versionName="1.0" android:installLocation="auto">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.UpcomingMovies.Arc" android:versionCode="1" android:versionName="1.0" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="15" />
-	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-	<uses-permission android:name="android.permission.BLUETOOTH" />
-	<application android:label="@string/app_name"></application>
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+	<uses-permission android:name="android.permission.INTERNET" />
+	<application android:label="ArcTouch - TheMoviesDB" android:icon="@drawable/icon"></application>
 </manifest>
