--- a/UpcomingMovies.Arc/UpcomingMovies.Arc/UpcomingMovies.Arc.Android/UpcomingMovies.Arc.Android.csproj
+++ b/UpcomingMovies.Arc/UpcomingMovies.Arc/UpcomingMovies.Arc.Android/UpcomingMovies.Arc.Android.csproj
@@ -242,6 +242,9 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable-xxxhdpi\ic_movie_creation_black_48dp.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\nopicturetoshow.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <Import Project="..\..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets" Condition="Exists('..\..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
