--- a/UpcomingMovies.Arc/UpcomingMovies.Arc/UpcomingMovies.Arc.UWP/UpcomingMovies.Arc.UWP.nuget.props
+++ b/UpcomingMovies.Arc/UpcomingMovies.Arc/UpcomingMovies.Arc.UWP/UpcomingMovies.Arc.UWP.nuget.props
@@ -4,6 +4,6 @@
     <NuGetPackageRoot>$(UserProfile)\.nuget\packages\</NuGetPackageRoot>
   </PropertyGroup>
   <ImportGroup>
-    <Import Project="$(NuGetPackageRoot)\Xamarin.Forms\2.4.0.280\build\netstandard1.0\Xamarin.Forms.targets" Condition="Exists('$(NuGetPackageRoot)\Xamarin.Forms\2.4.0.280\build\netstandard1.0\Xamarin.Forms.targets')" />
+    <Import Project="$(NuGetPackageRoot)\Xamarin.Forms\2.4.0.280\build\netstandard1.0\Xamarin.Forms.props" Condition="Exists('$(NuGetPackageRoot)\Xamarin.Forms\2.4.0.280\build\netstandard1.0\Xamarin.Forms.props')" />
   </ImportGroup>
 </Project>
